#[================================================================[.rst:
    Copyright (c)2021, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(Example_const_cast)
add_subdirectory(Example_dynamic_cast)
add_subdirectory(Example_reinterpret_cast)
add_subdirectory(Example_static_cast)
add_subdirectory(Example_use_class)
add_subdirectory(Example_use_struct)
add_subdirectory(UsingLambda)