#[================================================================[.rst:
    Copyright (c)2021, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(ChatGPTCode)
add_subdirectory(Example_const_cast)
add_subdirectory(Example_dynamic_cast)
add_subdirectory(Example_reinterpret_cast)
add_subdirectory(Example_sizeof)
add_subdirectory(Example_static_cast)
add_subdirectory(Example_use_class)
add_subdirectory(Example_use_struct)
add_subdirectory(FloatIsEqual)
add_subdirectory(MoveConstructor)
add_subdirectory(UsingLambda)
add_subdirectory(UsingUnion)