#[================================================================[.rst:
    Copyright (c)2023, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description: This include some DesignPattern example for learning.
#]================================================================]

add_subdirectory(CreationalPatterns)
add_subdirectory(StructuralPatterns)
add_subdirectory(BehavioralPatterns)