#[================================================================[.rst:
    Copyright (c)2023, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description: This include some DesignPattern example for learning.
#]================================================================]


add_subdirectory(UsingString)
add_subdirectory(UsingVector)
add_subdirectory(UsingDeque)
add_subdirectory(UsingStack)
add_subdirectory(UsingQueue)
add_subdirectory(UsingLists)
add_subdirectory(UsingSet)
add_subdirectory(UsingPtr)
add_subdirectory(UsingMath)
