#[================================================================[.rst:
    Copyright (c)2022, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(DefinitionsInCppFile)
add_subdirectory(ExamplesWithTemplates)
add_subdirectory(MSTemplateCase)
add_subdirectory(MSTemplateSpecialization)
add_subdirectory(MSTypenameCase)
add_subdirectory(ParametersCheckCase)
