#[================================================================[.rst:
    Copyright (c)2021, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(SharedPtr)
add_subdirectory(UniquePtr)
add_subdirectory(AutoPtr)
add_subdirectory(WeakPtr)
add_subdirectory(WeakPtrMicosoft)