#[================================================================[.rst:
    Copyright (c)2021, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(Constructor)
add_subdirectory(Operator)
add_subdirectory(Capacity)
add_subdirectory(InsertAndDelete)
add_subdirectory(StoreData)
add_subdirectory(Swap)
add_subdirectory(Reverse)