#[================================================================[.rst:
    Copyright (c)2023, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description: This include some StructuralPatterns example for learning.
#]================================================================]

add_subdirectory(ChainOfResponsibility)
add_subdirectory(Command)
add_subdirectory(Iterator)
add_subdirectory(Mediator)
add_subdirectory(Memento)
add_subdirectory(Observer)
add_subdirectory(State)
add_subdirectory(Strategy)
add_subdirectory(TemplateMethod)
add_subdirectory(Visitor)