#[================================================================[.rst:
    Copyright (c)2023, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description: This include some CreationalPatterns example for learning.
#]================================================================]

add_subdirectory(AbstractFactory)
add_subdirectory(Builder)
add_subdirectory(FactoryMethod)
add_subdirectory(Prototype)
add_subdirectory(SingleTon)
