#[================================================================[.rst:
    Copyright (c)2021, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(Constructure)
add_subdirectory(Operator)
add_subdirectory(Append)
add_subdirectory(FindAndReplace)
add_subdirectory(GetAndSet)
add_subdirectory(Compare)
add_subdirectory(InsertAndDelete)
add_subdirectory(SubStr)