#[================================================================[.rst:
    Copyright (c)2021, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(ex1_1)
add_subdirectory(ex1_2)
add_subdirectory(ex1_3)
add_subdirectory(ex1_4)
add_subdirectory(ex1_5)
add_subdirectory(ex1_6)
add_subdirectory(ex1_7)
add_subdirectory(ex1_7_more_1)
add_subdirectory(ex1_7_more_2)
add_subdirectory(ex1_8)
add_subdirectory(ex1_8_more_1)
add_subdirectory(ex1_8_more_2)
add_subdirectory(ex1_8_more_3)
add_subdirectory(ex1_8_more_4)
add_subdirectory(ex1_9)
add_subdirectory(ex1_9_more_1)
add_subdirectory(ex1_10)
add_subdirectory(ex1_10_more_1)
add_subdirectory(ex1_10_more_2)
add_subdirectory(ex1_11)
add_subdirectory(ex1_11_more_1)
add_subdirectory(ex1_12)
add_subdirectory(ex1_12_more_1)
add_subdirectory(ex1_12_more_2)
add_subdirectory(ex1_13)
add_subdirectory(ex1_13_more_1)
add_subdirectory(ex1_13_more_2)
add_subdirectory(ex1_14)