#[================================================================[.rst:
    Copyright (c)2021, Tom Zhao personal. ("UsingSTLEx")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

add_subdirectory(ex2_1)
add_subdirectory(ex2_2)
add_subdirectory(ex2_3)
add_subdirectory(ex2_4)
add_subdirectory(ex2_5)
add_subdirectory(ex2_6)
add_subdirectory(ex2_7)
add_subdirectory(ex2_8)